--- a/about-reboot.html
+++ b/about-reboot.html
@@ -107,7 +107,7 @@
       <div class="header__container container container--size-large">
         <a class="header__logo logo">
           <svg width="76" height="19">
-            <use xlink:href="#logo"></use>
+            <use xlink:href="#log"></use>
           </svg>
         </a>
         <div class="header__mobile mobile-canvas">
