--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
   <div class="animsition">
     <header class="header header--absolute header--separator header--bg-white __js_fixed-header">
       <div class="header__container container container--size-large">
-        <img id= "logo" src="img/logo.png" width="175" height="50" alt="reboot logo">
+        <img id= "logo" src="img/logo.png" width="335" height="84" alt="reboot logo">
         <a class="header__logo logo">
           <!-- <img width="200" height="19"> -->
             <use xlink:href="#logo"></use>
@@ -614,12 +614,12 @@
               <h1 class="modern-hero__title">
                 <span>MAKING</span>
                 <span>BRANDS</span>
-                <span>—SPEAK</span>
+                <span>SPEAK</span>
               </h1>
             </header>
             <div class="modern-hero__content col-6 col-md-3">
               <a class="modern-hero__btn round-button round-button--mobile-small" href="#">
-                <span class="round-button__circle">
+                <!-- <span class="round-button__circle">
                   <svg width="251" height="251">
                     <use xlink:href="#circle-text"></use>
                   </svg>
@@ -628,7 +628,7 @@
                   <svg width="67" height="61">
                     <use xlink:href="#c"></use>
                   </svg>
-                </span>
+                </span> -->
               </a>
               <a class="modern-hero__more arrow-link" href="about-reboot.html">
                 <span class="arrow-link__text">Why us</span>
@@ -707,12 +707,17 @@
             </div>
             <div class="about-video-section__aside col-12 col-md order-first order-md-0" data-aos="fade-up">
               <div class="about-video-section__video video-block">
-                <img src="img/picture/common/video-poster-2.jpg" width="810" height="539" alt="About us video">
-                <a class="video-block__btn play-btn" data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk" aria-label="Play button">
+                <video width="810" height="593" controls>
+                  <source src="video/Reboot.m4v" type="video/mp4">
+                  <source src="movie.ogg" type="video/ogg">
+                  Your browser does not support the video tag.
+                </video>
+                <!-- <img src="img/picture/common/video-poster-2.jpg" width="810" height="539" alt="About us video"> -->
+                <!-- <a class="video-block__btn play-btn" data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk" aria-label="Play button">
                   <svg width="17" height="19">
                     <use xlink:href="#triangle"></use>
                   </svg>
-                </a>
+                </a> -->
               </div>
             </div>
           </div>
@@ -819,12 +824,12 @@
       </section>
       <section class="team-section team-section--pb-0">
         <div class="team-section__container container container--size-large">
-          <h2 class="team-section__title" data-aos="fade-up">Our magic team</h2>
+          <h2 class="team-section__title" data-aos="fade-up">Our Magic Team</h2>
           <div class="team-section__grid">
             <div class="team-section__item">
               <div class="member-card" data-aos="fade-up">
                 <div class="member-card__image">
-                  <img src="img/picture/team/1.jpg" width="385" height="548" alt="Sam Flex photo">
+                  <img src="img/picture/team/yash dave.png" width="385" height="548" alt="Sam Flex photo">
                 </div>
                 <div class="member-card__info">
                   <div class="member-card__title">Yash Dave </div>
@@ -862,7 +867,7 @@
             <div class="team-section__item">
               <div class="member-card" data-aos="fade-up">
                 <div class="member-card__image">
-                  <img src="img/picture/team/1.jpg" width="355" height="241" alt="Kate Larson photo">
+                  <img src="img/picture/team/Ms.Shraddha.png" width="355" height="241" alt="Kate Larson photo">
                 </div>
                 <div class="member-card__info">
                   <div class="member-card__title">Shraddha Dave</div>
@@ -938,7 +943,7 @@
             <div class="team-section__item">
               <div class="member-card" data-aos="fade-up">
                 <div class="member-card__image">
-                  <img src="img/picture/team/1.jpg" width="474" height="450" alt="Bobby Fish photo">
+                  <img src="img/picture/team/Parita jahaveri.png" width="474" height="450" alt="Bobby Fish photo">
                 </div>
                 <div class="member-card__info">
                   <div class="member-card__title">Parita Jhaveri</div>
