--- a/reboot-projects.html
+++ b/reboot-projects.html
@@ -416,10 +416,10 @@
             <li class="portfolio-section__item __js_masonry-item">
               <a class="project-preview project-preview--elastic project-preview--vertical" href="single-project.html">
                 <span class="project-preview__image">
-                  <img src="img/picture/common/portfolio-section/1-mobile.jpg" alt="Realistic building">
+                  <img src="img/picture/single-project/Central Flex-01.png" alt="Realistic building">
                 </span>
                 <span class="project-preview__bottom">
-                  <span class="project-preview__title" title="Realistic building">Realistic building</span>
+                  <span class="project-preview__title" title="Realistic building">Samarthya Heights Branding </span>
                   <span class="project-preview__icon">
                     <svg width="24" height="23">
                       <use xlink:href="#link-arrow2"></use>
@@ -431,10 +431,10 @@
             <li class="portfolio-section__item __js_masonry-item">
               <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
                 <span class="project-preview__image">
-                  <img src="img/picture/common/portfolio-section/2.jpg" width="531" height="417" alt="Banana">
+                  <img src="img/picture/single-project/evelove grid 8-08.png" width="531" height="417" alt="Banana">
                 </span>
                 <span class="project-preview__bottom">
-                  <span class="project-preview__title" title="Banana">Banana</span>
+                  <span class="project-preview__title" title="Banana">Evelove Homes  </span>
                   <span class="project-preview__icon">
                     <svg width="24" height="23">
                       <use xlink:href="#link-arrow2"></use>
@@ -446,10 +446,10 @@
             <li class="portfolio-section__item __js_masonry-item">
               <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
                 <span class="project-preview__image">
-                  <img src="img/picture/common/portfolio-section/3.jpg" width="531" height="417" alt="Abstract lists">
+                  <img src="img/picture/single-project/Untitled-4-01.jpg" width="531" height="417" alt="Abstract lists">
                 </span>
                 <span class="project-preview__bottom">
-                  <span class="project-preview__title" title="Abstract lists">Abstract lists</span>
+                  <span class="project-preview__title" title="Abstract lists">Hallovin</span>
                   <span class="project-preview__icon">
                     <svg width="24" height="23">
                       <use xlink:href="#link-arrow2"></use>
@@ -461,7 +461,7 @@
             <li class="portfolio-section__item __js_masonry-item  portfolio-section__item--two-thirds">
               <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
                 <span class="project-preview__image">
-                  <img src="img/picture/common/portfolio-section/4-mobile.jpg" alt="Green onion">
+                  <img src="img/picture/single-project/12.png" alt="Green onion">
                 </span>
                 <span class="project-preview__bottom">
                   <span class="project-preview__title" title="Green onion">Green onion</span>
@@ -476,10 +476,10 @@
             <li class="portfolio-section__item __js_masonry-item">
               <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
                 <span class="project-preview__image">
-                  <img src="img/picture/common/portfolio-section/5.jpg" width="536" height="417" alt="Banana">
+                  <img src="img/picture/single-project/general caraousal-01.jpg" width="536" height="417" alt="Banana">
                 </span>
                 <span class="project-preview__bottom">
-                  <span class="project-preview__title" title="Banana">Banana</span>
+                  <span class="project-preview__title" title="Banana">Roccia Adventure Park </span>
                   <span class="project-preview__icon">
                     <svg width="24" height="23">
                       <use xlink:href="#link-arrow2"></use>
@@ -491,10 +491,10 @@
             <li class="portfolio-section__item __js_masonry-item">
               <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
                 <span class="project-preview__image">
-                  <img src="img/picture/common/portfolio-section/6.jpg" width="531" height="417" alt="Abstract lists">
+                  <img src="img/picture/single-project/01.png" width="531" height="417" alt="Abstract lists">
                 </span>
                 <span class="project-preview__bottom">
-                  <span class="project-preview__title" title="Abstract lists">Abstract lists</span>
+                  <span class="project-preview__title" title="Abstract lists">KREYANA BRANDING </span>
                   <span class="project-preview__icon">
                     <svg width="24" height="23">
                       <use xlink:href="#link-arrow2"></use>
@@ -521,7 +521,7 @@
             <li class="portfolio-section__item __js_masonry-item  portfolio-section__item--two-thirds">
               <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
                 <span class="project-preview__image">
-                  <img src="img/picture/common/portfolio-section/8-mobile.jpg" alt="Green onion">
+                  <img src="img/picture/single-project/facebook cover.png" alt="Green onion">
                 </span>
                 <span class="project-preview__bottom">
                   <span class="project-preview__title" title="Green onion">Green onion</span>
