--- a/single-project.html
+++ b/single-project.html
@@ -198,7 +198,7 @@
         <div class="single-project__container container container--size-large">
           <div class="single-project__hero row">
             <div class="single-project__hero-image col-12 col-md-6 col-lg-7 col-xxl-6">
-              <img src="img/picture/single-project/5.jpg" width="785" height="747" alt="project photo">
+              <img src="img/picture/single-project/SC.png" width="785" height="747" alt="project photo">
             </div>
             <div class="single-project__hero-main col-12 col-md-6 col-lg-5 col-xxl-6 order-md-first">
               <h1 class="single-project__title">
@@ -212,8 +212,9 @@
                 </svg>
               </div>
               <div class="single-project__hero-text">
-                Alienum phaedrum torquatos nec eu, detr periculis ex, nihil expetendis in mei. Mei an pericula euripidis hinc partem ei est. Eos ei nisl graecis, vix aperiri consequat an. Eius lorem tincidunt vix at, vel
-                pertinax sensibus id, error epicurei mea et. Mea facilisis urbanitas moderatius id. Vis ei rationibus definiebas.
+                We came up with the teaser concept for their project with keeping in mind the main USPs of their project, 
+                which mainly focuses on providing something extra compared to other projects in the same segment. 
+                The teasers were circulated on their social media pages & hoardings were pasted in the city.
               </div>
             </div>
           </div>
