--- a/index.html
+++ b/index.html
@@ -514,17 +514,16 @@
             </div>
             <div class="about-video-section__aside col-12 col-md order-first order-md-0" data-aos="fade-up">
               <div class="about-video-section__video video-block">
-                <video width="810" height="593" controls>
-                  <source src="video/Reboot.m4v" type="video/mp4">
-                  <source src="movie.ogg" type="video/ogg">
-                  Your browser does not support the video tag.
+                <!-- <video width="810" height="593" controls> -->
+                  <!-- <source src="img/picture/home/" type="video/mp4">
+                  <source src="movie.ogg" type="video/ogg"> -->
                 </video>
-                <!-- <img src="img/picture/common/video-poster-2.jpg" width="810" height="539" alt="About us video"> -->
-                <!-- <a class="video-block__btn play-btn" data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk" aria-label="Play button">
+                 <img src="img/picture/common/video-poster-2.jpg" width="810" height="539" alt="About us video"> -->
+                 <a class="video-block__btn play-btn" data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk" aria-label="Play button">
                   <svg width="17" height="19">
                     <use xlink:href="#triangle"></use>
                   </svg>
-                </a> -->
+                </a> 
               </div>
             </div>
           </div>
