--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
               <h1 class="modern-hero__title">
                 <span>MAKING</span>
                 <span>BRANDS</span>
-                <span class="speak">"SPEAK"</span>  
+                <span id="speak">"SPEAK"</span>  
               </h1>
             </header>
             <div class="modern-hero__content col-6 col-md-3">
@@ -518,7 +518,7 @@
                   <!-- <source src="img/picture/home/" type="video/mp4">
                   <source src="movie.ogg" type="video/ogg"> -->
                 </video>
-                 <img src="img/picture/common/video-poster-2.jpg" width="810" height="539" alt="About us video"> -->
+                 <img src="img/picture/common/video-poster-2.jpg" width="810" height="539" alt="About us video"> 
                  <a class="video-block__btn play-btn" data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk" aria-label="Play button">
                   <svg width="17" height="19">
                     <use xlink:href="#triangle"></use>
