--- a/index.html
+++ b/index.html
@@ -547,9 +547,9 @@
               </div>
               <div class="statistics__item col-6 col-md-auto" data-aos="fade-up">
                 <div class="statistics__item-value">
-                  <span class="__js_number" data-end-value="20">0</span><h1 class="statistics__item-text ">lac +</h1>
+                  <span class="__js_number" data-end-value="20">0</span>
                 </div>
-                <div class="statistics__item-text">people
+                <div class="statistics__item-text">lac + people
                   <br>reached
                 </div>
               </div>
@@ -559,6 +559,108 @@
                 </div>
                 <div class="statistics__item-text">awards and
                   <br>accolades
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="our-services">
+        <div class="our-services__container container container--size-large">
+          <header class="our-services__header our-services__header--large" data-aos="fade-up">
+            <div class="row">
+              <div class="col-12 col-md-6 col-xl-5 col-xxl-3" data-aos="fade-up">
+                <h2 class="our-services__title our-services__title--upper">Our Services</h2>
+              </div>
+              <div class="col-12 col-md-12 col-xl-5 col-xxl-6 order-md-1 order-xl-0" data-aos="fade-up">
+                <div class="our-services__short">We’ve worked with a wide array of clients across the globe to apply design fundamentals of elegance, simplicity</div>
+              </div>
+              <div class="col-12 col-md-auto col-xl-2 col-xxl-3 ml-auto text-md-right" data-aos="fade-up">
+                <a class="our-services__more our-services__more--negative-top arrow-link--white arrow-link" href="services.html">
+                  <span class="arrow-link__text">View all</span>
+                  <span class="arrow-link__icon">
+                    <svg width="75" height="75">
+                      <use xlink:href="#link-arrow"></use>
+                    </svg>
+                  </span>
+                </a>
+              </div>
+            </div>
+          </header>
+          <div class="our-services__accordion accordion">
+            <div class="accordion__item" data-aos="fade-up">
+              <button class="accordion__item-header" type="button">
+                <span class="row align-items-md-center">
+                  <span class="accordion__item-title col-11 col-md-5">Design</span>
+                  <span class="accordion__item-short col-11 col-md-6">Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.</span>
+                </span>
+              </button>
+              <div class="accordion__item-body">
+                <div class="row">
+                  <div class="accordion__item-left col-12 col-md-6 col-lg-5">
+                    <img src="img/picture/home/accordion-large.jpg" width="810" height="530" alt="Concept">
+                  </div>
+                  <div class="accordion__item-right col-12 col-md-6 col-lg-7">
+                    <img src="img/picture/home/accordion-small.jpg" width="348" height="287" alt="Concept">
+                    <div class="accordion__item-text">In the design process, they create both functional and beautiful things. The team possesses unique individuality and strong qualifications and can easily translate something so abstract and visionary into a digital experience. They always put the clients first no matter how complicated the tasks are.</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="accordion__item" data-aos="fade-up">
+              <button class="accordion__item-header" type="button">
+                <span class="row align-items-md-center">
+                  <span class="accordion__item-title col-11 col-md-5">Development</span>
+                  <span class="accordion__item-short col-11 col-md-6">We make our customers ' products valuable in the eyes of customers. To do this, we analyze and study people, build long-term strategies for interacting with them, develop creative ideas and create a bright design.</span>
+                </span>
+              </button>
+              <div class="accordion__item-body">
+                <div class="row">
+                  <div class="accordion__item-left col-12 col-md-6 col-lg-5">
+                    <img src="img/picture/home/accordion-large.jpg" width="810" height="530" alt="Concept">
+                  </div>
+                  <div class="accordion__item-right col-12 col-md-6 col-lg-7">
+                    <img src="img/picture/home/accordion-small.jpg" width="348" height="287" alt="Concept">
+                    <div class="accordion__item-text">In the design process, they create both functional and beautiful things. The team possesses unique individuality and strong qualifications and can easily translate something so abstract and visionary into a digital experience. They always put the clients first no matter how complicated the tasks are.</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="accordion__item" data-aos="fade-up">
+              <button class="accordion__item-header" type="button">
+                <span class="row align-items-md-center">
+                  <span class="accordion__item-title col-11 col-md-5">Graphic</span>
+                  <span class="accordion__item-short col-11 col-md-6">Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.</span>
+                </span>
+              </button>
+              <div class="accordion__item-body">
+                <div class="row">
+                  <div class="accordion__item-left col-12 col-md-6 col-lg-5">
+                    <img src="img/picture/home/accordion-large.jpg" width="810" height="530" alt="Concept">
+                  </div>
+                  <div class="accordion__item-right col-12 col-md-6 col-lg-7">
+                    <img src="img/picture/home/accordion-small.jpg" width="348" height="287" alt="Concept">
+                    <div class="accordion__item-text">In the design process, they create both functional and beautiful things. The team possesses unique individuality and strong qualifications and can easily translate something so abstract and visionary into a digital experience. They always put the clients first no matter how complicated the tasks are.</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="accordion__item" data-aos="fade-up">
+              <button class="accordion__item-header" type="button">
+                <span class="row align-items-md-center">
+                  <span class="accordion__item-title col-11 col-md-5">Wordpress</span>
+                  <span class="accordion__item-short col-11 col-md-6">Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.</span>
+                </span>
+              </button>
+              <div class="accordion__item-body">
+                <div class="row">
+                  <div class="accordion__item-left col-12 col-md-6 col-lg-5">
+                    <img src="img/picture/home/accordion-large.jpg" width="810" height="530" alt="Concept">
+                  </div>
+                  <div class="accordion__item-right col-12 col-md-6 col-lg-7">
+                    <img src="img/picture/home/accordion-small.jpg" width="348" height="287" alt="Concept">
+                    <div class="accordion__item-text">In the design process, they create both functional and beautiful things. The team possesses unique individuality and strong qualifications and can easily translate something so abstract and visionary into a digital experience. They always put the clients first no matter how complicated the tasks are.</div>
+                  </div>
                 </div>
               </div>
             </div>
