--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
             <div class="accordion__item" data-aos="fade-up">
               <button class="accordion__item-header" type="button">
                 <span class="row align-items-md-center">
-                  <span class="accordion__item-title col-11 col-md-5">Design</span>
+                  <span class="accordion__item-title col-11 col-md-5">SOCIAL MEDIA MANAGEMENT</span>
                   <span class="accordion__item-short col-11 col-md-6">Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.</span>
                 </span>
               </button>
@@ -610,7 +610,7 @@
             <div class="accordion__item" data-aos="fade-up">
               <button class="accordion__item-header" type="button">
                 <span class="row align-items-md-center">
-                  <span class="accordion__item-title col-11 col-md-5">Development</span>
+                  <span class="accordion__item-title col-11 col-md-5">SOCIAL MEDIA ADVERTISEMENT</span>
                   <span class="accordion__item-short col-11 col-md-6">We make our customers ' products valuable in the eyes of customers. To do this, we analyze and study people, build long-term strategies for interacting with them, develop creative ideas and create a bright design.</span>
                 </span>
               </button>
@@ -629,7 +629,7 @@
             <div class="accordion__item" data-aos="fade-up">
               <button class="accordion__item-header" type="button">
                 <span class="row align-items-md-center">
-                  <span class="accordion__item-title col-11 col-md-5">Graphic</span>
+                  <span class="accordion__item-title col-11 col-md-5">BRANDING SOLUTION</span>
                   <span class="accordion__item-short col-11 col-md-6">Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.</span>
                 </span>
               </button>
@@ -648,7 +648,7 @@
             <div class="accordion__item" data-aos="fade-up">
               <button class="accordion__item-header" type="button">
                 <span class="row align-items-md-center">
-                  <span class="accordion__item-title col-11 col-md-5">Wordpress</span>
+                  <span class="accordion__item-title col-11 col-md-5">GRAPHIC DESIGNING</span>
                   <span class="accordion__item-short col-11 col-md-6">Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.</span>
                 </span>
               </button>
@@ -813,7 +813,7 @@
             <div class="team-section__item">
               <div class="member-card" data-aos="fade-up">
                 <div class="member-card__image">
-                  <img src="img/picture/team/1.jpg" width="474" height="450" alt="Bobby Fish photo">
+                  <img src="img/picture/team/dileep.png" width="474" height="450" alt="Bobby Fish photo">
                 </div>
                 <div class="member-card__info">
                   <div class="member-card__title">Dileep Singh</div>
@@ -929,7 +929,7 @@
       </section>
       <section class="start-project">
         <div class="start-project__container container container--size-large">
-          <h1 class="start-project__title" data-aos="fade-up">Start A PROJECT?</h1>
+          <h1 class="start-project__title" data-aos="fade-up">lets connect</h1>
           <div class="start-project__grid row g-0">
             <div class="start-project__discuss discuss-project discuss-project--no-padding col-12 col-lg-8">
               <div class="discuss-project__wrapper" data-aos="fade-up">
