logo page completed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <symbol id="arrow-down">
         <path d="M29.508 17.438l-2.422-2.422L16.72 25.382 17.4.432l-3.424.01-.682 24.951L2.992 15.09.555 17.527 14.986 31.96l14.522-14.521z" />
       </symbol>
-      <symbol id="logo" viewBox="0 0 76 19">
+      <symbol id="lo" viewBox="0 0 76 19">
         <path d="M10.05 9.9h2.625c-.325-2.9-2.5-5.025-5.825-5.025-3.8 0-6.275 2.75-6.275 6.75s2.475 6.75 6.3 6.75c3.325 0 5.6-2.175 5.8-5.125H10.05c-.1 1.425-.925 2.975-3.175 2.975-2.6 0-3.675-2.2-3.675-4.6 0-2.4 1.1-4.6 3.675-4.6 2.25 0 3.075 1.575 3.175 2.875zm10.01 6.325c-2.326 0-3.7-1.775-3.7-3.925h9.8c0-4.55-2.026-7.425-6.15-7.425-3.85 0-6.276 2.6-6.276 6.75 0 4 2.425 6.75 6.4 6.75 3.275 0 5.175-1.85 5.825-4.275h-2.625c-.225.775-1.1 2.125-3.275 2.125zm-.05-9.275c2.124 0 3.524 1.425 3.524 3.4H16.36c0-1.975 1.525-3.4 3.65-3.4zm14.824-2.075c-2.2 0-3.525 1-4.2 2h-.05v-1.65h-2.625V18h2.625v-7.775c0-1.9 1.3-3.125 3.325-3.125 1.8 0 2.525 1.1 2.525 2.825V18h2.65V9.175c0-2.925-1.875-4.3-4.25-4.3zm12.506 2.5v-2.15h-2.4V1.2h-2.65v4.025h-1.85v2.15h1.85v7.15c0 2.7 1.15 3.65 3.25 3.65.7 0 1.275-.075 1.8-.2v-2.15c-1.7.1-2.4-.075-2.4-1.525V7.375h2.4zm9.083-2.45c-1.6 0-2.8 1.025-3.775 2.625l-.05.075.475-2.4h-2.625L47.948 18h2.625l1.275-6.45c.525-2.7 2.925-4.475 5.375-4.075l.4-2.45c-.35-.075-.675-.1-1.2-.1zm4.987-1.85c.65 0 1.4-.4 1.55-1.225.2-.975-.525-1.55-1.35-1.55-.65 0-1.4.4-1.575 1.2-.175 1 .55 1.575 1.375 1.575zm-1.9 2.15L57.01 18h2.625l2.5-12.775H59.51zm4.495 0l3.075 6.25L61.03 18h3.1l4.225-4.8h.05L70.73 18h3.025l-3.5-6.525 5.55-6.25H72.78l-3.775 4.5h-.05l-2.025-4.5h-2.925z" />
       </symbol>
       <symbol id="long-arrow-right" viewBox="0 0 50 16">
@@ -41,7 +41,7 @@
       </symbol>
       <symbol id="c" viewBox="0 0 35.42 38" > 
         
-        <g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path d="M8.62,38,0,38,.08.05,20.17,0a13.57,13.57,0,0,1,6.89,1.88A11,11,0,0,1,30.94,6.7a12.62,12.62,0,0,1,.76,7.24Q31.07,18,26,20.49L35.42,38l-9.15,0L15.21,17.56l5.27-.07q2.72-1,2.77-5t-4.4-4.21L8.62,8.34Z" style="fill:#000000"/></g></g>    
+        <g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path d="M8.62,38,0,38,.08.05,20.17,0a13.57,13.57,0,0,1,6.89,1.88A11,11,0,0,1,30.94,6.7a12.62,12.62,0,0,1,.76,7.24Q31.07,18,26,20.49L35.42,38l-9.15,0L15.21,17.56l5.27-.07q2.72-1,2.77-5t-4.4-4.21L8.62,8.34Z" style="fill:#ffffff"/></g></g>    
         <!-- <path d="M168.17,165.83c-1.22,.46-2.1,.31-2.97,.31-9.19-.06-18.39-.2-27.58-.18-1.75,0-2.59-.65-3.38-2.11-11.7-21.69-23.45-43.34-35.18-65.02-1.05-1.94-2.35-3.77-3.01-5.94,1.12-.62,2.11-.4,3.05-.42,4.21-.07,8.42-.23,12.62-.09,3.93,.13,6.7-1.74,9.02-4.58,1.44-1.77,2.33-3.84,2.9-6.04,.97-3.74,1.16-7.56,.63-11.36-.73-5.27-3.9-8.62-8.91-10.21-2.62-.83-5.34-1.19-8.1-1.16-10.86,.12-21.71,.24-32.57,.36-.39,0-.78,.03-1.17,.01-1.12-.05-1.59,.5-1.55,1.59,.03,.88,0,1.76,0,2.64,0,32.97,0,65.93,0,98.9,0,.49,.01,.98,0,1.47-.06,2.15-.06,2.23-2.08,2.21-8.8-.09-17.6,.05-26.4-.26-2.83-.1-2.57-.45-2.57-2.66,.02-11.35,.03-22.69,.04-34.04,.04-31.89,.09-63.78,.13-95.67,0-.39,0-.78,0-1.17q.03-2.87,2.91-2.89c1.66-.01,3.33,0,4.99-.01,20.73-.1,41.47-.21,62.2-.28,4.5-.01,8.96,.56,13.39,1.42,14.17,2.74,23.23,11.43,28.4,24.51,3.42,8.63,3.65,17.58,1.6,26.54-1.68,7.34-6.38,12.64-12.38,16.88-1.67,1.18-3.45,2.22-5.23,3.24-2.4,1.37-2.43,1.35-1.18,3.68,4.54,8.44,9.09,16.87,13.64,25.31,5.89,10.93,11.79,21.86,17.68,32.79,.36,.67,.65,1.38,1.05,2.24Z" style="fill:#fbb934;"/>
         <path d="M42.72 21.48h9.52C50.88 9.8 42.08.6 27.6.6 11.12.6.72 13.16.72 30.36c0 17.28 10.4 29.84 26.88 29.84 14.56 0 23.36-9.2 24.64-22.08h-9.52c-.64 6.96-4.72 13.92-15.36 13.92-12.32 0-17.2-10.32-17.2-21.68 0-11.28 4.88-21.6 17.2-21.6 10.56 0 14.32 6.96 15.36 12.72zm18.524 38.16c2.88 0 5.12-2 5.12-5.2 0-3.12-2.24-5.2-5.12-5.2-2.96 0-5.2 2.08-5.2 5.2 0 3.2 2.24 5.2 5.2 5.2z" />  -->
       </symbol>
@@ -109,11 +109,8 @@
   <div class="animsition">
     <header class="header header--absolute header--separator header--bg-white __js_fixed-header">
       <div class="header__container container container--size-large">
-        <!-- <img id= "logo" src="img/logo.png" width="335" height="84" alt="reboot logo"> -->
         <a class="header__logo logo">
-          <!-- <img width="200" height="19"> -->
-            <use xlink:href="#logo"></use>
-        </img>
+          <img src="img/logo-01.png" alt=""  width="216" height="57">
         </a>
         <div class="header__mobile mobile-canvas">
           <nav class="mobile-canvas__nav navigation">
@@ -670,7 +667,7 @@
       <section class="carousel-section carousel-section--separator carousel-section--pb-large">
         <div class="carousel-section__container container container--size-large">
           <header class="carousel-section__header row align-items-end align-items-md-center">
-            <h2 class="carousel-section__title col-8 col-md-10" data-aos="fade-up">Latest works</h2>
+            <h2 class="carousel-section__title col-8 col-md-10" data-aos="fade-up">Latest Works</h2>
             <div class="carousel-section__nav col-12 col-md-2 order-last order-md-0" data-aos="fade-up">
               <button class="nav-btn nav-btn--prev" data-target=".__js_carousel-latest-projects" type="button">
                 <svg width="50" height="16">
@@ -929,7 +926,7 @@
       </section>
       <section class="start-project">
         <div class="start-project__container container container--size-large">
-          <h1 class="start-project__title" data-aos="fade-up">lets connect</h1>
+          <h1 class="team-section__title" data-aos="fade-up">Let's Connect</h1>
           <div class="start-project__grid row g-0">
             <div class="start-project__discuss discuss-project discuss-project--no-padding col-12 col-lg-8">
               <div class="discuss-project__wrapper" data-aos="fade-up">
